Initial commit: Flight management system implementation

--- a/templates/admin/vol/edit.html.twig
+++ b/templates/admin/vol/edit.html.twig
@@ -17,13 +17,14 @@
                     <div class="row">
                         <div class="col-md-6">
                             {{ form_row(form.compagnie) }}
-                            {{ form_row(form.aeroportDepart) }}
-                            {{ form_row(form.aeroportArrivee) }}
+                            {{ form_row(form.aeroport_depart) }}
+                            {{ form_row(form.aeroport_arrivee) }}
                         </div>
                         <div class="col-md-6">
-                            {{ form_row(form.dateDepart) }}
-                            {{ form_row(form.dateArrivee) }}
+                            {{ form_row(form.date_depart) }}
+                            {{ form_row(form.date_arrivee) }}
                             {{ form_row(form.prix) }}
+                            {{ form_row(form.destination) }}
                         </div>
                     </div>
                     <div class="mt-4">
